# narcpm

./: .gitignore  LICENSE  README.md
src/: .clang-format  .clang_complete  CMakeCompileFlags.txt  CMakeLists.txt
src/narcpm/: CMakeLists.txt
src/narcpm/src/: config.cpp  config.hpp  main.cpp  narcpm.cpp  narcpm.hpp  package.hpp  toolchain.hpp  util.hpp
